--- a/ProgramJenkinsTraining/ProgramJenkinsTraining.csproj
+++ b/ProgramJenkinsTraining/ProgramJenkinsTraining.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Framework" Version="17.0.0" />
+  </ItemGroup>
+
 </Project>
