--- a/ProgramJenkinsTraining/ProgramJenkinsTraining.csproj
+++ b/ProgramJenkinsTraining/ProgramJenkinsTraining.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExtentReports" Version="4.1.0" />
     <PackageReference Include="Microsoft.Build.Framework" Version="17.0.0" />
   </ItemGroup>
 
